# calabi_yau_metrics

./: Guide.ipynb  main.py  requirements.txt  setup.cfg
configs/: training_config.yaml
configs/algorithm/: base_algorithm.yaml  task_2.yaml  task_3.yaml
configs/env/: base_env.yaml
configs/evaluation/: base_evaluation.yaml
configs/experiment/task_1/: baseline.yaml  big_network_structure_ablation.yaml  bigger_baseline.yaml  debug_baseline.yaml  final_eval.yaml  fixed_lr_ablation.yaml  lr_ablation.yaml  network_structure_ablation.yaml
configs/experiment/task_2/: debug_task_2.yaml  final_eval.yaml  first_ablation.yaml
configs/experiment/task_3/: debug_task_3.yaml  final_eval.yaml  first_ablation.yaml
configs/platform/: kluster_1_gpu.yaml  local.yaml
scripts/playground/: guide.py  task_2_albert.py
src/MLGeometry/: bihomoNN.py  lbfgs.py  tf_dataset.py  u1_equivariant_layer.py
src/calabi_yau_metrics/algorithms/: __init__.py  abstract_algorithm.py  task_1_algorithm.py  task_2_algorithm.py  task_3_algorithm.py
src/calabi_yau_metrics/architectures/: bihomogenous_nn.py  spectral_nn.py  spectral_nn_bias.py  u1_equivariant_nn.py
src/calabi_yau_metrics/envs/: environment.py
src/calabi_yau_metrics/evaluation/: evaluator.py
src/calabi_yau_metrics/util/: util.py  wandb_stuff.py
training/: bihomoNN_train.py  models.py
