
[metadata]
name = calabi_yau_metrics
description = Predicting Calabi Yau metrics
author = anonymous
license = tbd
license_file = LICENSE
platforms = linux, osx
version = 0.0.1
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
install_requires =
     tensorflow-probability==0.14.0
     sympy
     matplotlib
     ipykernel
     tensorflow>=2.12.1

python_requires = >=3.10
package_dir =
    =src
packages =
    MLGeometry
    calabi_yau_metrics
